Fixed #22, Bad layout on mobiles when viewing groups. Removed use of <table>s.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,9 +1,4 @@
-.eventlabel {
-  font-weight: bold;
-  padding-right: 10px;
-}
-
-.participation-on {
+.particiption-on {
   background-color: #5BB75B;
   text-transform: none;
 }
@@ -36,11 +31,6 @@ dl.participation {
   margin-bottom: 0;
 }
 
-.align-right {
-  float: right;
-  vertical-align: bottom;
-}
-
 .transparent {
   background: transparent;
   padding: 0;
@@ -49,10 +39,6 @@ dl.participation {
 
 .smaller-modal {
   width: 370px;
-}
-
-td.right-aligned {
-  text-align: right;
 }
 
 .gravatar {
@@ -73,10 +59,6 @@ td.right-aligned {
   padding-left: 5px;
   margin-bottom: 0;
   color: #b94a48;
-}
-
-.table {
-  margin-bottom: 6px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -103,4 +85,8 @@ body {
 
 .btn-row {
   margin-top: 6px;
+}
+
+.email-address {
+  color: #909090;
 }
